--- a/srcs/frontend/srcs/index.html
+++ b/srcs/frontend/srcs/index.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Welcome to nginx!</title>
-<style>
-html { color-scheme: light dark; }
-body { width: 35em; margin: 0 auto;
-font-family: Tahoma, Verdana, Arial, sans-serif; }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bootstrap Example</title>
+  <!-- 부트스트랩 CSS 로드 -->
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
-<h1>Welcome to nginx!</h1>
-<p>If you see this page, the nginx web server is successfully installed and
-working. Further configuration is required.</p>
-
-<p>For online documentation and support please refer to
-<a href="http://nginx.org/">nginx.org</a>.<br/>
-Commercial support is available at
-<a href="http://nginx.com/">nginx.com</a>.</p>
-
-<p><em>Thank you for using nginx.</em></p>
+  <div class="container text-center mt-5">
+    <h1>Hello, Bootstrap on NGINX!</h1>
+    <button class="btn btn-primary mt-3">Click Me</button>
+  </div>
+  <!-- 부트스트랩 JS 로드 -->
+  <script src="/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
